Changing menubar implementation to support sub-sub-items in the narrow layout. Some formatting problems remain

--- a/_posts/2017-11-30-classic-2-0.md
+++ b/_posts/2017-11-30-classic-2-0.md
@@ -6,7 +6,7 @@ categories: jekyll classic
 ---
 Just over a year has gone by since the first Classic release. Since then lots of detail has been added and bugfixes have been made.
 
-With version 2.0 we have implemented even more features, but at a small price. The innards have been updated considerably, so if a site has made changes to the old innards, then some hands on may be required before this update runs the site.
+With version 2.0 we have implemented even more features, but at a small price. The innards have been updated considerably, so if a site has made changes to the old innards, then some hands on will be required before this update runs the site.
 
 The good news is two fold:
 
@@ -15,10 +15,12 @@ The good news is two fold:
 
 New features (since 1.9.4):
 
-1. The navigation banner can now be fixed at the top of the browser window.
-1. A vertical menu can be activated by disabling the drop-down menu. This vertical menu will appear on top of the secondary column or the primary column, depending on the screen width.
-1. A categories widget has been added to replace the categories menu entry.
-1. The categories menu entry is still available through a setup parameter if the drop-down menus are enabled.
-1. The vertical menu now allows three levels of menu entries. The first level stays in the menu bar. The second level is the top level in the vertical menu, the third level is sub-level in the vertical menu.
+1. The navigation banner can now be fixed to the top of the browser window.
+1. A vertical menu can be activated by disabling the drop-down menu. This vertical menu will appear on top of the secondary column.
+1. A categories widget has been added to replace the categories menu entry when the dropdown is disabled.
+1. There are now three levels of menu entries. menu-items, submenu-items and subsubmenu-items.
 1. All menu levels are controlled from the YAML front matter. But it is possible to construct the entire menu configuration in a single page.
-
+1. Much more configurable items. Almost every aspect of the theme can be configured in one way or the other.
+1. A subtitle has been added that can be displayed in the banner.
+1. The banner icon en title-area have hook-ups for easy customisation.
+1. The liquid code was updated to Liquid 4 to create more compact HTML code.
