--- a/_posts/2017-12-19-classic-2-0.md
+++ b/_posts/2017-12-19-classic-2-0.md
@@ -12,4 +12,4 @@ More good news is that the YAML of the old version still works. So it is not nec
 
 Several pages with info have been added to the theme, to access those, copy the _pages_ directory from the theme directory to the website directory and regenerate the site.
 
-Alternatively, visit: [www.balancingrock.nl/classic](http://www.balancingrock.nl/classic)
+Alternatively, visit: [www.balancingrock.nl/classic-jekyll-theme/index.html](http://www.balancingrock.nl/classic-jekyll-theme/index.html)
