Bugfix for #13, landing page selection did not evaluate menuInclude tag

--- a/_posts/2017-12-19-classic-2-0.md
+++ b/_posts/2017-12-19-classic-2-0.md
@@ -6,8 +6,8 @@ categories: jekyll classic
 ---
 Just over a year has gone by since the first Classic release. Since then lots of detail has been added and bugfixes have been made.
 
-With version 2.0 we have implemented more features and added more configuration options. The code base for this theme was updated considerably. Reimplemented may be a better phrasing. The result is a better readable, better documented code base. Even the readability of the generated HTML code has been improved substantially. We believe this makes it easier to do your own customization of the theme.
+With version 2.0 we have implemented more features and added more configuration options. The code base for this theme was updated considerably. Reimplemented may be a better phrasing. The result is a better readable, better documented code base. Even the readability of the generated HTML code has been improved substantially. We believe this makes it even easier to do your own customization.
 
 More good news is that the YAML of the old version still works. So it is not necessary to update existing content.
 
-In addition, this theme is now used to generates its own website at github.io: [http://balancingrock.github.io/classic-jekyll-theme/index.html](http://balancingrock.github.io/classic-jekyll-theme/index.html)
+In addition, this theme is now used to generate its own website at github.io: [http://balancingrock.github.io/classic-jekyll-theme/index.html](http://balancingrock.github.io/classic-jekyll-theme/index.html)
