Functionally identical to github release 2.1.0

--- a/_posts/2018-01-22-bugfix-2-1.md
+++ b/_posts/2018-01-22-bugfix-2-1.md
@@ -4,10 +4,15 @@ title:  Bugfix release v2.1.0
 date:   2017-12-22
 categories: classic
 ---
-This release fixes a problem where the landing page selection (for top menu items) in v2.0.0 did not evaluate the "menuInclude" tag correctly.
+This release fixes issues #11 and #13
 
-There is a small additional benefit that fixing this bug also created the opportunity for a slight performance improvement that may be noticeable on sites that use many pages.
+There is a small additional benefit that fixing #13 also created the opportunity for a slight performance improvement that may be noticeable on sites that use many pages.
 
-The only file that was changed is `_includes/menubar.html`.
+The changed files are:
+
+- _includes/menubar.html
+- _includes/widgets/categories.html
 
 This release is fully backward compatible with the previous release. Upgrading is recommended for all users.
+
+Note for Rubygems users: due a mixup this release is identical to release 2.1.1 on rubygems.
