--- a/_posts/2018-01-22-bugfix-2-1.md
+++ b/_posts/2018-01-22-bugfix-2-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  Bugfix release v2.1.0
+title:  Bugfix release v2.1.0 & 2.1.1
 date:   2017-12-22
 categories: classic
 ---
@@ -15,4 +15,4 @@ The changed files are:
 
 This release is fully backward compatible with the previous release. Upgrading is recommended for all users.
 
-Note for Rubygems users: due a mixup this release is identical to release 2.1.1 on rubygems.
+Version mixup: On github release 2.1.0 and 2.1.1 are identical. On rubygems release 2.1.0 does not have the #11 fix.
