--- a/_posts/2018-04-05-issue-19.md
+++ b/_posts/2018-04-05-issue-19.md
@@ -4,7 +4,7 @@ title:  Issue 19 fixed
 date:   2018-04-05
 categories: classic
 ---
-Issue: Firefox will not display the icon in the banner. Other browsers seem to work fine.
+Issue: Firefox will not display the icon in the banner or menubar. Other browsers seem to work fine.
 
 Problem: Firefox needs the '::after' attribute for url content to be injected properly.
 
