--- a/_posts/2019-01-15-release-2-4-0.md
+++ b/_posts/2019-01-15-release-2-4-0.md
@@ -19,7 +19,7 @@ To remove pages from the menu, set the _exclude-pages-from-menus_ to 'yes'.
 
 To include posts in the menu structure, set the _include-posts-in-menus_ to 'yes'.
 
-Menu control for posts is the same as for pages. For example, this post has the following extra meu directives:
+Menu control for posts is the same as for pages. For example, this post has the following extra menu directives:
 
     menuInclude: yes
     menuTopTitle: Classic
@@ -27,4 +27,4 @@ Menu control for posts is the same as for pages. For example, this post has the 
     - title: A post as menu item
 
 
-For more, see the menu item in the menu bar.
+For more on creating menus, see the menus item in the menu bar.
