--- a/_posts/2019-01-15-release-2-4-0.md
+++ b/_posts/2019-01-15-release-2-4-0.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  Release 2.4.0
+title:  Release 2.4.0 & 2.4.1
 date:   2019-01-15
 menuInclude: yes
 menuTopTitle: Classic
@@ -28,3 +28,5 @@ Menu control for posts is the same as for pages. For example, this post has the 
 
 
 For more on creating menus, see the menus item in the menu bar.
+
+PS: Just after pushing the new release into the world, an error was discovered. Release 2.4.1 fixes this error.
